# rust-hacl-star

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
examples/hacl-box-wasm/: Cargo.toml  index.js
examples/hacl-box-wasm/src/: lib.rs
hacl-star-sys/: Cargo.toml  build.rs
hacl-star-sys/src/: aead_poly1305.rs  chacha20.rs  chacha20poly1305.rs  curve25519.rs  ed25519.rs  hacl_policies.rs  hmac_sha2_256.rs  lib.rs  nacl.rs  poly1305.rs  randombytes.rs  salsa20.rs  sha2_256.rs  sha2_384.rs  sha2_512.rs  sys.rs
hacl-star-sys/src/imp/: aead_poly1305.rs  chacha20.rs  chacha20poly1305.rs  curve25519.rs  ed25519.rs  hacl_policies.rs  hmac_sha2_256.rs  mod.rs  nacl.rs  poly1305.rs  salsa20.rs  sha2_256.rs  sha2_384.rs  sha2_512.rs
hacl-sys/: Cargo.toml  build.rs
hacl-sys/src/: lib.rs
src/: aead.rs  box.rs  chacha20.rs  chacha20poly1305.rs  ctr.rs  curve25519.rs  ed25519.rs  error.rs  ffi.rs  hmac.rs  lib.rs  nacl.rs  poly1305.rs  randombytes.rs  salsa20.rs  sha2.rs
tests/: box.rs  chacha20.rs  chacha20poly1305.rs  curve25519.rs  ed25519.rs  hmac.rs  nacl.rs  poly1305.rs  randombytes.rs  salsa20.rs  sha2.rs
