[package]
name = "hacl-star"
version = "0.0.12"
authors = ["quininer <quininer@live.com>"]
description = "HACL*, a formally verified cryptographic library for Rust (binding to hacl-c)."
keywords = [ "hacl-star", "cryptography" ]
categories = [ "cryptography" ]
repository = "https://github.com/quininer/rust-hacl-star"
documentation = "https://docs.rs/hacl-star/"
license = "MIT"

[workspace]

[features]
bindgen = [ "hacl-star-sys/bindgen" ]
std = [ "hacl-star-sys/use_std" ]

[badges]
travis-ci = { repository = "quininer/rust-hacl-star" }
appveyor = { repository = "quininer/rust-hacl-star" }

[dependencies]
hacl-star-sys = { version = "=0.0.6", path = "hacl-star-sys" }
