[package]
name = "hacl-star-sys"
version = "0.0.3"
authors = ["quininer <quininer@live.com>"]
description = "HACL* FFI"
keywords = [ "hacl-star", "cryptographic" ]
categories = [ "no-std", "cryptography", "api-bindings" ]
repository = "https://github.com/quininer/rust-hacl-star"
license = "MIT"

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
cc = "1.0"
bindgen = { version = "0.32", optional = true }
