[package]
name = "hacl-star-sys"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
description = "HACL* FFI"
keywords = [ "hacl-star", "cryptographic" ]
categories = [ "no-std", "cryptography", "api-bindings" ]
repository = "https://github.com/quininer/rust-hacl-star"
documentation = "https://docs.rs/hacl-star-sys/"
license = "MIT"
edition = "2018"

[features]
default = [ "bindgen" ]
use_std = [ "libc/use_std" ]
overwrite = [ "bindgen" ]

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
cc = "1.0"
bindgen = { version = "0.40", optional = true }
