[package]
name = "hacl-box-wasm"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacl-star = { path = "../.." }
wasm-bindgen = "*"
arrayref = "*"
